# dot-files

./: .bash_aliases  .bash_functions  .bashrc  .ghci  .gitattributes  .gitconfig  .gitignore  .gitmodules  .inputrc  .vimrc  .ycm_extra_conf.py  Makefile  README.md  arch_package_list.txt  aur_packages.txt  capitalize_all_files.py  configure.sh  debian_package_list.txt  link_dot_files.sh  link_redshift.sh  nvim_setup.sh  package_lists.txt  setup_virtual_envs.sh  setup_youcompleteme.sh  ubuntu_package_list.txt
Xresources/: .Xresources
alacritty/.config/alacritty/: alacritty.toml  alacritty.yml
bash/: .bash_functions  .bash_profile  .bashrc  .inputrc  .profile
bash/.bash/: .bash_aliases  .bash_functions
bash/.bash/.aliases/: movement  network  programs
bash/.bash/.functions/: file  processes  system
bash/.bash/aliases/: date  editing  file  movement  network  programs  system
bash/.bash/completions/: beet-completion.bash  functions-completions.bash
bash/.bash/functions/: audio  colors  editing  file  image  misc  movement  processes  system  youtube-dl
beets/.config/beets/: config.yaml
cmus/: .cmus-notify
cmus/.cmus/: gruvbox.theme  lib.pl
cmus/.cmus/status_display/: cmus_notify.py  cmus_notify.sh  custom_notifier.py  status_display_notify_send.py  status_display_notify_send.sh
cpp/: .clang-format  .ycm_extra_conf.py
ctags/: .ctags
documentation/: CONFIGURATION.md  INSTALL.md  SCREENSHOTS.md
dunst/.config/dunst/: dunstrc
emacs/: .emacs
erlang/: .erlang
erlang/.erlang.d/: user_default.erl
erlang_ls/.config/erlang_ls/: erlang_ls.config
feh/: .fehbg
firefox/.homepage/: index.html
firefox/.homepage/css/: homepage.css
firefox/.homepage/js/: homepage.js
fonts/.fonts/: .uuid  Library
fonts/.fonts/Iosevka/: Iosevka-Bold.ttc  Iosevka-ExtraBold.ttc  Iosevka-ExtraLight.ttc  Iosevka-Heavy.ttc  Iosevka-Light.ttc  (+49 more)
formatters/: .clang-format
gdb/: .gdbinit
git/: .gitconfig
git/.git.d/: global_gitignore
gtk/: .gtkrc-2.0
haskell/: .ghci
javascript/: .tern-project
kerl/: .kerlrc
latex/: .latexmkrc
locale/.config/: locale.conf
mpd/: .mpdconf
mutt/: .mailcap  .muttrc
mutt/.mutt/: gruvbox-theme  macros  sidebar
ncmpcpp/.ncmpcpp/: config
neovim/.config/: .luarc.json
newsbeuter/.newsbeuter/: public
newsboat/.newsboat/: config  public
ocaml/: .lambda-term-inputrc  .utoprc
ocaml/.ocp/: ocp-indent.conf
python/: .pypirc
redshift/: redshift.conf
redshift/.config/: redshift.conf
scripts/: Makefile  capitalize_all_files.py  move_audio_files_to_artist_folder.py
scripts/bash/: clean-local-tmp.sh  cmus-status.bash  connect_to_ulaval_vpn.sh  control-brightness.bash  control-volume.bash  corsair-keyboard.bash  cppman.bash  create-dialyzer-plt.bash  create-eduroam-netctl-file.bash  create-latex-font.bash  create-named-pipe.bash  create-tmux-session.bash  create-tmux-sessions.bash  display-album-cover.bash  display-song-information.bash  fix-systemd-user-units.sh  haskellman.bash  install_opencv3.sh  kubernetes-dashboard.bash  merge-rss-urls.bash  notification-send.bash  nvim-file-opener.bash  printscreen.bash  printscreen.sh  recompile-xmonad.sh  send-mqtt.bash  spawn-rtv.sh  unmount-device.sh  unwatermark.sh  webman.bash
scripts/haskell/: ConvertToCMYK.hs
scripts/haskell/create-gitignore/: .gitignore  LICENSE  create-gitignore.cabal
scripts/haskell/create-gitignore/src/: Main.hs
scripts/javascript/: connexion-monportail.js  ebrary-changing-page.js
scripts/manpages/: control-brightness.1  control-volume.1
scripts/python/: capitalize_all_files.py  cmus_notify.py  cmus_parse.py  create_gitignore.py  display_screens.py  move_audio_files_to_artist_folder.py
shell/: .infokey  .inputrc  .profile  .prompt
shell/.aliases/: date  editing  file  programs  system
spell/: en.utf-8.add  fr.utf-8.add
systemd-units/: change-wallpaper.service  change-wallpaper.timer  clean-local-tmp.service  clean-local-tmp.timer  dunst.service  mpdstats.service  send-mqtt@.service  send-mqtt@.timer  sort-pictures.service  sort-pictures.timer
systemd-units/system/: netctl-auto-resume.service
tmux/: .tmux.conf
tmux/.tmux.d/: colors.conf  mappings.conf  misc.conf  status-line.conf
tmuxp/.tmuxp/: chat.yaml  code.yaml  email.yaml  music.yaml  news.yaml  notes.yaml  remote.yaml  work.yaml
urxvt/: .Xresources
vim/: .vimrc
weechat/.weechat/: buflist.conf  irc.conf  plugins.conf  trigger.conf  weechat.conf
xbindkeys/: .xbindkeysrc
xfonts/.Xresources.d/: xfonts
xmobar/: .xmobarrc
xmonad/.xmonad/: .gitignore  LICENSE  xmonad-configuration.cabal  xmonad.hs
xmonad/.xmonad/app/: Main.hs
xmonad/.xmonad/lib/Bindings/: Keybindings.hs  MouseBindings.hs
xmonad/.xmonad/lib/Hooks/: ManageHooks.hs  Notifications.hs  Wallpapers.hs
xmonad/.xmonad/lib/Programs/: Brightness.hs  Commands.hs  MusicPlayers.hs  Terminals.hs  Volume.hs
xmonad/.xmonad/lib/Prompts/: SearchPrompts.hs
xmonad/.xmonad/lib/Themes/: Colors.hs  Fonts.hs  Gruvbox.hs  Palettes.hs  Themes.hs
xmonad/.xmonad/lib/XMonad/Bindings/: Keybindings.hs  MouseBindings.hs
xmonad/.xmonad/lib/XMonad/Hooks/: ManageHooks.hs  Notifications.hs  Wallpapers.hs
xmonad/.xmonad/lib/XMonad/Programs/: Commands.hs  MusicPlayers.hs  Terminals.hs
xmonad/.xmonad/lib/XMonad/Prompts/: SearchPrompts.hs
xmonad/.xmonad/lib/XMonad/Themes/: Colors.hs  Fonts.hs  Gruvbox.hs  Palettes.hs  Themes.hs
xmonad/.xmonad/src/Bindings/: Keybindings.hs
xmonad/.xmonad/src/Programs/: Brightness.hs  MusicPlayers.hs  Volume.hs
xmonad/.xmonad/src/Prompts/: SearchPrompts.hs
xmonad/.xmonad/src/Themes/: Gruvbox.hs  Palettes.hs
xmonad/.xmonad/test/Bindings/: Keybindings.hs  MouseBindings.hs
xmonad/.xmonad/test/Hooks/: ManageHooks.hs  Notifications.hs
xmonad/.xmonad/test/Programs/: BrightnessSpec.hs  MusicPlayers.hs  Terminals.hs
xmonad/.xmonad/test/Prompts/: SearchPrompts.hs
xmonad/.xmonad/test/Themes/: Colors.hs  ColorsSpec.hs  Fonts.hs  FontsSpec.hs  Gruvbox.hs  Palettes.hs  Themes.hs
xorg/: .xinitrc  .xscreensaver
zsh/: .zprofile  .zshrc
zsh/.zsh/: .zprofile  .zshrc  histfile
(+346 files in other folders)
