name:                xmonad-configuration
synopsis:            XMonad's Configuration
description:         Contains XMonad's configuration parameters
version:             1.0.0
license:             MIT
license-file:        LICENSE
author:              Antoine Gagné
maintainer:          antoine.gagne.2@ulaval.ca
copyright:           2018
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: lib
  ghc-options: -O3 -Wall
  exposed-modules: Bindings.Keybindings
                 , Bindings.MouseBindings
                 , Hooks.ManageHooks
                 , Hooks.Notifications
                 , Programs.Commands
                 , Programs.MusicPlayers
                 , Programs.Terminals
                 , Programs.Volume
                 , Prompts.SearchPrompts
                 , Themes.Colors
                 , Themes.Fonts
                 , Themes.Gruvbox
                 , Themes.Palettes
                 , Themes.Themes
  build-depends:       base >= 4.7 && < 5
                     , xmonad >= 0.13
                     , xmonad-contrib >= 0.13
                     , containers
                     , directory
                     , transformers >= 0.5.2
                     , libmpd >= 0.9
                     , bytestring >= 0.10
                     , transformers >= 0.5
                     , dbus >= 0.10
                     , fdo-notify >= 0.3
                     , X11 >= 1.8
                     , xmonad-extras >= 0.13.2
                     , data-default == 0.7.1.1
  default-language:    Haskell2010

executable xmonad-x86_64-linux
  main-is:             xmonad.hs
  ghc-options: -O3 -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , xmonad >= 0.13
                     , xmonad-contrib >= 0.13
                     , containers
                     , directory
                     , process >= 1.4
                     , transformers >= 0.5.2
                     , libmpd >= 0.9
                     , bytestring >= 0.10
                     , transformers >= 0.5
                     , dbus >= 0.10
                     , fdo-notify >= 0.3
                     , xmonad-configuration
                     , X11 >= 1.8
                     , xmonad-extras >= 0.13.2
  default-language:    Haskell2010

test-suite xmonad-configuration-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , xmonad >= 0.13
                     , xmonad-contrib >= 0.13
                     , containers
                     , directory
                     , process >= 1.4
                     , transformers >= 0.5.2
                     , libmpd >= 0.9
                     , bytestring >= 0.10
                     , transformers >= 0.5
                     , dbus >= 0.10
                     , fdo-notify >= 0.3
                     , xmonad-configuration
                     , X11 >= 1.8
                     , hspec
                     , QuickCheck
  ghc-options: -O3 -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
