name:                xmonad-configuration
synopsis:            XMonad's Configuration
description:         Contains XMonad's configuration parameters
version:             1.0.0
license:             MIT
license-file:        LICENSE
author:              Antoine Gagné
maintainer:          antoine.gagne.2@ulaval.ca
copyright:           2018
category:            System
build-type:          Simple
cabal-version:       >=1.10

flag with_mpd
  description: Enable MPD support in XMonad (such as play/pause)
  default: True

executable xmonad-x86_64-linux
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -static -O3 -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , xmonad >= 0.15 && < 0.16
                     , xmonad-contrib >= 0.16 && < 0.17
                     , containers
                     , directory
                     , process >= 1.4
                     , transformers >= 0.5.2
                     , libmpd >= 0.10
                     , bytestring >= 0.10
                     , transformers >= 0.5
                     , dbus >= 1.2 && < 1.3
                     , fdo-notify >= 0.3
                     , xmonad-configuration
                     , X11 >= 1.8
                     , xmonad-extras >= 0.13.2
  default-language:    Haskell2010

library
  hs-source-dirs: src
  ghc-options: -O3 -Wall -static
  exposed-modules: Bindings.Keybindings
                 , Bindings.MouseBindings
                 , Hooks.ManageHooks
                 , Hooks.Notifications
                 , Programs.Brightness
                 , Programs.Commands
                 , Programs.MusicPlayers
                 , Programs.Terminals
                 , Programs.Volume
                 , Prompts.SearchPrompts
                 , Themes.Colors
                 , Themes.Fonts
                 , Themes.Gruvbox
                 , Themes.Palettes
                 , Themes.Themes
  build-depends:       base >= 4.7 && < 5
                     , xmonad >= 0.15 && < 0.16
                     , xmonad-contrib >= 0.16 && < 0.17
                     , containers
                     , directory
                     , transformers >= 0.5.2
                     , bytestring >= 0.10
                     , transformers >= 0.5
                     , dbus >= 1.2 && < 1.3
                     , fdo-notify >= 0.3
                     , X11 >= 1.8
                     , xmonad-extras >= 0.13.2
                     , data-default >= 0.7.1 && < 0.8
                     , lens >= 4.19 && < 4.20
                     , easy-file >= 0.2 && < 0.3
                     , text >= 1.2 && < 1.3
  default-language:    Haskell2010

  if flag(with_mpd)
    build-depends: libmpd >= 0.10
    cpp-options: -DWITH_MPD

test-suite xmonad-configuration-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Programs.BrightnessSpec
                     , Themes.ColorsSpec
                     , Themes.FontsSpec
  build-depends:       base
                     , xmonad >= 0.13
                     , xmonad-contrib >= 0.13
                     , containers
                     , directory
                     , process >= 1.4
                     , transformers >= 0.5.2
                     , libmpd >= 0.9
                     , bytestring >= 0.10
                     , transformers >= 0.5
                     , dbus >= 0.10
                     , fdo-notify >= 0.3
                     , lens >= 4.19 && < 4.20
                     , X11 >= 1.8
                     , xmonad-configuration
                     , hspec >= 2.7
                     , hspec-discover >= 2.7
                     , QuickCheck
  ghc-options: -O3 -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
