name:                create-gitignore
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/AntoineGagne/create-gitignore#readme
license:             BSD3
license-file:        LICENSE
author:              Antoine Gagné
maintainer:          antoine.gagne.2@ulaval.ca
copyright:           Antoine Gagné
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable create-gitignore
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , bytestring
                     , http-client
                     , http-client-tls
